--- a/config/fleet/nav2_diadem_fleet_config.yaml
+++ b/config/fleet/nav2_diadem_fleet_config.yaml
@@ -33,8 +33,8 @@ rmf_fleet:
   finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
-    nav2_tb3:
-      charger: "diadem_charger"
+    diadem1:
+      charger: "diadem1_charger"
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
       navigation_stack: 2
